@@ -8,6 +8,7 @@ xine-lib (1.1.9) (unreleased)
   * Improve syncing of audio and video in the presence of bad frames.
   * Improve handling of invalid or unknown frame sizes.
   * Fixed handling of streamed Flash videos (broken in 1.1.5).
+  * Fixed division by zero in sputext decoder
 
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
